--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,11 @@ nbdist/
 .nb-gradle/
 
 ######################################################################
+# Logs and Uploads
+logs/
+uploadPath/
+
+######################################################################
 # Others
 *.log
 *.xml.versionsBackup
@@ -45,3 +50,6 @@ nbdist/
 !*/build/*.java
 !*/build/*.html
 !*/build/*.xml
+
+# 数据库配置文件
+application-druid.yml
